@@ -359,8 +359,8 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .settings_link_search a			{text-decoration:none; display:block; color:#ccc;}
 .settings_link_search a:hover	{color:#fff;}
 .search_intro_wrap				{width:960px; margin:0 auto; margin-top:40px; color:#fff; font-size:20px; line-height:26px;}
-.search_intro_wrap span			{font-size:1.0em; color:#fff; padding-right:0;}
-.search_intro_wrap span:hover	{border-bottom:2px solid #fff; cursor:pointer;}
+.search_intro_wrap span			{font-size:1.0em; color:#97d8ff; padding-right:0;}
+.search_intro_wrap span:hover	{border-bottom:2px solid #97d8ff; cursor:pointer;}
 
 .press_enter 				{color:#ccc; position:absolute; right:20px; top:32px; font-size:20px;}	/*	Press Enter div in input box	*/
 	
