@@ -1,3 +1,9 @@
+Development Portal (2017-09-04 shi)
+==============================
+Fixed typo in view_countries.js
+Fixed link colour for search
+
+
 Development Portal (2017-09-03 shi)
 ==============================
 Added donor and sector types to views
